--- a/pom.xml
+++ b/pom.xml
@@ -38,10 +38,8 @@
 <properties> 
     <maven.compiler.target>1.8</maven.compiler.target> 
     <maven.compiler.source>1.8</maven.compiler.source> 
-    <sonar.organization>jononekin</sonar.organization> 
-    <sonar.host.url>https://sonarcloud.io</sonar.host.url>   
-    <sonar.projectKey>your sonarcloud project key name</sonar.projectKey>   
-    <sonar.login>your code</sonar.login>  
+    <sonar.organization>andrujuanoo</sonar.organization>
+    <sonar.host.url>https://sonarcloud.io</sonar.host.url> 
 </properties> 
  
 <!-- https://mvnrepository.com/artifact/junit/junit --> 
